<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="?android:attr/windowOverscan"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />-->


    <RelativeLayout
        android:id="@+id/activity_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btnSearch"
                style="@android:style/Widget.Material.Button.Inset"
                android:layout_width="71dp"
                android:layout_height="wrap_content"

                android:layout_alignBottom="@+id/inputParameter"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@+id/inputParameter"

                android:background="@android:drawable/ic_menu_search"
                android:backgroundTintMode="screen"
                android:foregroundTint="#CAA8A8" />

            <EditText
                android:id="@+id/inputParameter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:autofillHints=""
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:gravity="center"
                android:inputType="textCapCharacters"
                android:textAlignment="center" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1">

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:accessibilityLiveRegion="polite"
                android:linksClickable="true"
                android:longClickable="true"
                android:rotationY="-4"
                android:text="SAVE"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#E9F3E9"
               
                android:textSize="14sp"
                tools:visibility="visible"
                />

            <Button
                android:id="@+id/btnView"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:textColor="#E9F3E9"
                android:textSize="14sp"
                android:layout_toEndOf="@+id/btnAdd"
                android:text="View Data" />



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="177dp">


            <TextView
                android:id="@+id/searchingParameter"
                android:layout_width="200dp"
                android:layout_height="30dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="220dp"
                android:text=""
                android:textSize="25sp" />





        </RelativeLayout>

]

        <RelativeLayout
            android:layout_width="410dp"
            android:layout_height="449dp"


            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="-3dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">




            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wordsRecyclerView"
                
                />
<!--
            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="414dp">

                <TextView
                    android:id="@+id/text_view_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000" />


            </androidx.core.widget.NestedScrollView>-->




        </RelativeLayout>


    </RelativeLayout>


    <!-- <include layout="@layout/content_main" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>