...
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="30sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnDelete"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="97dp"
...
            android:layout_marginEnd="-3dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


            <ListView
                android:id="@+id/examplesWordView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
            <!--
                        <androidx.core.widget.NestedScrollView
...
